fixing the flexbox, spacings, margin, paddings for the desktop design

--- a/styles/contato.css
+++ b/styles/contato.css
@@ -48,3 +48,9 @@
   }
 
 }
+
+@media screen and (max-width:1728px){
+  .contato{
+    padding:3em 20vh;
+  }
+}
